==> pestalella/Thor/Firmware/ILI9488.cpp <==
#include "ILI9488.h"
#include <limits.h>
#include <SPI.h>

void ILI9488::spiwrite(uint8_t c) 
{
  SPI.transfer(c);
}

void ILI9488::writecommand(uint8_t c) {
  digitalWrite(_dc, LOW);
  digitalWrite(_cs, LOW);

  spiwrite(c);

  digitalWrite(_cs, HIGH);
}

void ILI9488::writedata(uint8_t c) {
  digitalWrite(_dc, HIGH);
  digitalWrite(_cs, LOW);

  spiwrite(c);

  digitalWrite(_cs, HIGH);
}

void ILI9488::drawImage(const uint8_t* img, uint16_t x, uint16_t y, uint16_t w, uint16_t h)
{
  // rudimentary clipping (drawChar w/big text requires this)
  if((x >= _width) || (y >= _height)) return;
  if((x + w - 1) >= _width)  w = _width  - x;
  if((y + h - 1) >= _height) h = _height - y;

  spi_begin();
  setAddrWindow(x, y, x+w-1, y+h-1);

  digitalWrite(_dc, HIGH);
  digitalWrite(_cs, LOW);

  uint8_t linebuff[w*3+1];
  uint16_t pixels = w*h;
  uint32_t count = 0;
  for (uint16_t i = 0; i < h; i++) {
    uint16_t pixcount = 0;
    for (uint16_t o = 0; o <  w; o++) {
      uint8_t b1 = img[count];
      count++;
      uint8_t b2 = img[count];
      count++;
      uint16_t color = b1 << 8 | b2;
      linebuff[pixcount] = (((color & 0xF800) >> 11)* 255) / 31;
      pixcount++;
      linebuff[pixcount] = (((color & 0x07E0) >> 5) * 255) / 63;
      pixcount++;
      linebuff[pixcount] = ((color & 0x001F)* 255) / 31;
      pixcount++;
    } // for row
    for(uint16_t b = 0; b < w*3; b++){
      spiwrite(linebuff[b]);
    }

  }// for col

  digitalWrite(_cs, HIGH);
  spi_end();
}

void ILI9488::pushColor(uint16_t color) {
  spi_begin();

  digitalWrite(_dc, HIGH);
  digitalWrite(_cs, LOW);

  write16BitColor(color);

  digitalWrite(_cs, HIGH);

  spi_end();
}

void ILI9488::pushColors(uint16_t *data, uint8_t len, boolean first) 
{
  uint16_t color;
  uint8_t  buff[len*3+1];
  uint16_t count = 0;
  uint8_t lencount = len;
  spi_begin();
    digitalWrite(_cs, LOW);
  if(first == true) { // Issue GRAM write command only on first call
      digitalWrite(_dc, HIGH);
  }
  while(lencount--) {
    color = *data++;
    buff[count] = (((color & 0xF800) >> 11)* 255) / 31;
    count++;
    buff[count] = (((color & 0x07E0) >> 5) * 255) / 63;
    count++;
    buff[count] = ((color & 0x001F)* 255) / 31;
    count++;
  }
  for(uint16_t b = 0; b < len*3; b++){
    spiwrite(buff[b]);
  }
  digitalWrite(_cs, HIGH);

  spi_end();
}

void ILI9488::drawPixel(int16_t x, int16_t y, uint16_t color) {

  if((x < 0) ||(x >= _width) || (y < 0) || (y >= _height)) return;

  spi_begin();
  setAddrWindow(x,y,x+1,y+1);

  digitalWrite(_dc, HIGH);
  digitalWrite(_cs, LOW);

  write16BitColor(color);

  digitalWrite(_cs, HIGH);

  spi_end();
}

void ILI9488::drawFastVLine(int16_t x, int16_t y, int16_t h,
 uint16_t color) {

  // Rudimentary clipping
  if((x >= _width) || (y >= _height)) return;

  if((y+h-1) >= _height)
    h = _height-y;

  SPI.beginTransaction(SPISettings(24000000, MSBFIRST, SPI_MODE0, SPI_TRANSMITONLY));
  setAddrWindow(x, y, x, y+h-1);

  digitalWrite(_dc, HIGH);
  digitalWrite(_cs, LOW);

  uint8_t r = (color & 0xF800) >> 11;
  uint8_t g = (color & 0x07E0) >> 5;
  uint8_t b = color & 0x001F;

  r = (r * 255) / 31;
  g = (g * 255) / 63;
  b = (b * 255) / 31;

  uint8_t buf[480*3];

  for (int i = 0; i < h*3; i+=3) {
    buf[i + 0] = r;
    buf[i + 1] = g;
    buf[i + 2] = b;
  }
  SPI.transfer(buf, h*3);
  digitalWrite(_cs, HIGH);

  spi_end();
}

void ILI9488::drawFastHLine(int16_t x, int16_t y, int16_t w,
  uint16_t color) {

  // Rudimentary clipping
  if((x >= _width) || (y >= _height)) return;
  if((x+w-1) >= _width)  w = _width-x;

  SPI.beginTransaction(SPISettings(24000000, MSBFIRST, SPI_MODE0, SPI_TRANSMITONLY));

  setAddrWindow(x, y, x+w-1, y);

  digitalWrite(_dc, HIGH);
  digitalWrite(_cs, LOW);

  uint8_t r = (color & 0xF800) >> 11;
  uint8_t g = (color & 0x07E0) >> 5;
  uint8_t b = color & 0x001F;

  r = (r * 255) / 31;
  g = (g * 255) / 63;
  b = (b * 255) / 31;

  uint8_t buf[480*3];

  for (int i = 0; i < w*3; i+=3) {
    buf[i + 0] = r;
    buf[i + 1] = g;
    buf[i + 2] = b;
  }
  SPI.transfer(buf, w*3);
  digitalWrite(_cs, HIGH);

  spi_end();
}

void ILI9488::fillRect(int16_t x, int16_t y, int16_t w, int16_t h,
  uint16_t color) {

  // rudimentary clipping (drawChar w/big text requires this)
  if((x >= _width) || (y >= _height)) return;
  if((x + w - 1) >= _width)  w = _width  - x;
  if((y + h - 1) >= _height) h = _height - y;

  SPI.beginTransaction(SPISettings(24000000, MSBFIRST, SPI_MODE0, SPI_TRANSMITONLY));

  setAddrWindow(x, y, x+w-1, y+h-1);

  digitalWrite(_dc, HIGH);
  digitalWrite(_cs, LOW);

  uint8_t r = (color & 0xF800) >> 11;
  uint8_t g = (color & 0x07E0) >> 5;
  uint8_t b = color & 0x001F;

  r = (r * 255) / 31;
  g = (g * 255) / 63;
  b = (b * 255) / 31;

  uint8_t buf[480*3];

  for (int i = 0; i < w*3; i+=3) {
    buf[i + 0] = r;
    buf[i + 1] = g;
    buf[i + 2] = b;
  }
  
  for (int i = 0; i < h; i++) {
    SPI.transfer(buf, w*3);
  }

  digitalWrite(_cs, HIGH);
  spi_end();
}
